<resources>
    <string name="app_name">Journal App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_tab_my_journal">My Journal</string>
    <string name="title_tab_shared_journal">Shared Journal</string>
    <string name="title_tab_feed_journal">Feeds</string>
    <string name="title_nav_friend">Friend</string>
    <string name="title_nav_profile">My Profile</string>

    <string name="msg_click_to_signup"><b>Click here to sign up</b></string>
    <string name="msg_share_to">Share To</string>
    <string name="msg_share_to_personal">Personal</string>
    <string name="msg_share_to_friends">Friends</string>
    <string name="msg_share_to_other_source">Other Source</string>
    <string name="msg_input_email">Please input email of friend</string>

    <string name="error_journal_text_empty">journal text cannot be empty</string>
    <string name="error_journal_title_empty">journal title cannot be empty</string>

    <string name="registration_email_hint">Email</string>
    <string name="registration_username_hint">Username</string>
    <string name="registration_password_hint">Password</string>
    <string name="registration_confirm_password_hint">Confirm Password</string>
    <string name="registration_phonenum_hint">Phone number</string>
    <string name="journal_title_hint">Title</string>
    <string name="journal_text_hint">Text</string>

</resources>
