<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<android.support.constraint.ConstraintLayout
    android:background="@color/colorAppBackgroundBottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/text_share_to_choice_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:text="@string/msg_share_to"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button_share_to_choice_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_share_to_choice_label">

        <CheckBox
            android:id="@+id/check_box_share_to_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_share_to_personal"/>

        <CheckBox
            android:text="@string/msg_share_to_friends"
            android:id="@+id/check_box_share_to_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:text="@string/msg_share_to_other_source"
            android:id="@+id/check_box_share_to_other_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/button_share_to_choice_close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/text_share_to_choice_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_share_to_choice_label"
        app:srcCompat="@drawable/ic_close" />

</android.support.constraint.ConstraintLayout>
</layout>