<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.SignUpFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/app_background"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:padding="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/coordinatorLayout"
                    android:paddingBottom="8dp">

                    <android.support.v4.widget.NestedScrollView
                        android:id="@+id/nested_scroll_signup_form"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="8dp">


                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:id="@+id/circle_image_signup_profile_pics"
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:layout_centerInParent="true"
                                    android:layout_gravity="center_horizontal"
                                    android:scaleType="centerCrop"
                                    android:src="@color/colorLightGray"
                                    app:civ_border_color="@color/colorPrimary"
                                    app:civ_border_width="2dp"
                                    app:civ_circle_background_color="@color/colorChatBackground" />

                                <ImageButton
                                    android:id="@+id/image_button_signup_picker"
                                    android:layout_width="28dp"
                                    android:layout_height="28dp"
                                    android:layout_below="@id/circle_image_signup_profile_pics"
                                    android:layout_marginLeft="-20dp"
                                    android:layout_marginTop="-10dp"
                                    android:layout_toRightOf="@id/circle_image_signup_profile_pics"
                                    android:background="@drawable/circle_background36dp"
                                    android:foregroundGravity="center"
                                    android:src="@drawable/ic_add_a_photo" />

                            </RelativeLayout>

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/textinput_layout_signup_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp">

                                <EditText
                                    android:id="@+id/edittext_signup_username"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/registration_username_hint"
                                    android:inputType="text"
                                    android:maxLines="1" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/textinput_layout_signup_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp">

                                <EditText
                                    android:id="@+id/edittext_signup_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/registration_password_hint"
                                    android:inputType="textPassword"
                                    android:maxLines="1" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/textinput_layout_signup_confirm_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp">

                                <EditText
                                    android:id="@+id/edittext_signup_confirm_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/registration_confirm_password_hint"
                                    android:inputType="textPassword"
                                    android:maxLines="1" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/textinput_layout_signup_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp">

                                <EditText
                                    android:id="@+id/edittext_signup_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/registration_email_hint"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/textinput_layout_signup_phoneNum"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp">

                                <EditText
                                    android:id="@+id/edittext_signup_phone_num"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/registration_phonenum_hint"
                                    android:inputType="phone"
                                    android:maxLines="1" />

                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>
                    </android.support.v4.widget.NestedScrollView>

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab_signup_with_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="195dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:src="@drawable/ic_facebook_icon"
                        android:visibility="invisible"
                        app:backgroundTint="@color/colorChatBackground"
                        app:elevation="6dp"
                        app:fabSize="normal"
                        app:layout_anchor="@id/nested_scroll_signup_form"
                        app:layout_anchorGravity="right|bottom"
                        app:pressedTranslationZ="12dp"
                        app:srcCompat="@drawable/ic_facebook_icon" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab_signup_with_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="130dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:src="@drawable/ic_google_icon"
                        android:visibility="invisible"
                        app:backgroundTint="@color/colorChatBackground"
                        app:elevation="6dp"
                        app:fabSize="normal"
                        app:layout_anchor="@id/nested_scroll_signup_form"
                        app:layout_anchorGravity="bottom|right"
                        app:pressedTranslationZ="12dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab_signup_with_email_pasword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="65dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:src="@drawable/ic_login_icon"
                        android:visibility="invisible"
                        app:fabSize="normal"
                        app:layout_anchor="@id/nested_scroll_signup_form"
                        app:layout_anchorGravity="bottom|right"
                        app:pressedTranslationZ="12dp" />


                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab_signup_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_add_"
                        app:fabSize="normal"
                        app:layout_anchor="@id/nested_scroll_signup_form"
                        app:layout_anchorGravity="bottom|right"
                        app:pressedTranslationZ="12dp" />

                    <!--TODO: Undo this if custom progressbar is needed-->
                    <ImageView
                        android:id="@+id/image_custom_progress_bar_icon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_custom_progress_bar_icon"
                        android:visibility="gone" />

                </android.support.design.widget.CoordinatorLayout>

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</layout>