<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_in"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background"
        android:fitsSystemWindows="true"
        tools:context=".Activities.SignInActivity">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:padding="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.CoordinatorLayout
                android:id="@+id/coordinatorLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="8dp">

                <android.support.v4.widget.NestedScrollView
                    android:id="@+id/nested_scroll_signin_form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textinput_layout_signin_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp">

                            <EditText
                                android:id="@+id/edittext_signin_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/registration_email_hint"
                                android:inputType="text|textEmailAddress"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/textinput_layout_signin_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp">

                            <EditText
                                android:id="@+id/edittext_signin_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/registration_password_hint"
                                android:inputType="textPassword"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>

                        <TextView
                            android:id="@+id/text_signin_signup_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="4dp"
                            android:text="@string/msg_click_to_signup"
                            android:textColor="@color/colorTextLink" />

                        <Button
                            android:id="@+id/button_forgot_password"
                            android:layout_marginTop="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:background="@color/colorPrimary"
                            android:textColor="@color/colorAppBackgroundBottom"
                            android:layout_gravity="center_horizontal"
                            android:textSize="12sp"
                            android:text="RESET PASSWORD"/>

                    </LinearLayout>
                </android.support.v4.widget.NestedScrollView>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_signin_with_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="195dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:src="@drawable/ic_facebook_icon"
                    android:visibility="invisible"
                    app:backgroundTint="@color/colorChatBackground"
                    app:elevation="6dp"
                    app:fabSize="normal"
                    app:layout_anchor="@id/nested_scroll_signin_form"
                    app:layout_anchorGravity="right|bottom"
                    app:pressedTranslationZ="12dp"
                    app:srcCompat="@drawable/ic_facebook_icon" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_signin_with_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="130dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:src="@drawable/ic_google_icon"
                    android:visibility="invisible"
                    app:backgroundTint="@color/colorChatBackground"
                    app:elevation="6dp"
                    app:fabSize="normal"
                    app:layout_anchor="@id/nested_scroll_signin_form"
                    app:layout_anchorGravity="bottom|right"
                    app:pressedTranslationZ="12dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_signin_with_email_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="65dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:src="@drawable/ic_login_icon"
                    android:visibility="invisible"
                    app:fabSize="normal"
                    app:layout_anchor="@id/nested_scroll_signin_form"
                    app:layout_anchorGravity="bottom|right"
                    app:pressedTranslationZ="12dp" />


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_signin_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_add_"
                    app:fabSize="normal"
                    app:layout_anchor="@id/nested_scroll_signin_form"
                    app:layout_anchorGravity="bottom|right"
                    app:pressedTranslationZ="12dp" />

                <ImageView
                    android:id="@+id/image_custom_progress_bar_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_custom_progress_bar_icon"
                    android:visibility="gone" />

            </android.support.design.widget.CoordinatorLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</layout>